# irisdual

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build-macOS.yml
src/dual/: CMakeLists.txt
src/dual/include/dual/: audio_driver.hpp
src/dual/include/dual/arm/: coprocessor.hpp  cpu.hpp  memory.hpp
src/dual/include/dual/common/: backup_file.hpp  cycle_counter.hpp  fifo.hpp  scheduler.hpp
src/dual/include/dual/nds/: cartridge.hpp  dma.hpp  enums.hpp  header.hpp  ipc.hpp  irq.hpp  nds.hpp  rom.hpp  swram.hpp  system_memory.hpp  timer.hpp
src/dual/include/dual/nds/arm7/: apu.hpp  dma.hpp  memory.hpp  rtc.hpp  spi.hpp  touch_screen.hpp  wifi.hpp
src/dual/include/dual/nds/arm9/: cp15.hpp  dma.hpp  math.hpp  memory.hpp
src/dual/include/dual/nds/backup/: eeprom.hpp  eeprom512b.hpp  flash.hpp
src/dual/include/dual/nds/video_unit/: video_unit.hpp
src/dual/include/dual/nds/video_unit/gpu/: command_processor.hpp  geometry_engine.hpp  gpu.hpp  math.hpp  registers.hpp
src/dual/include/dual/nds/video_unit/gpu/renderer/: renderer_base.hpp  software_renderer.hpp
src/dual/include/dual/nds/video_unit/ppu/: ppu.hpp  registers.hpp
src/dual/include/dual/nds/vram/: region.hpp  vram.hpp
src/dual/src/arm/: arm.cpp  arm.hpp
src/dual/src/arm/handlers/: handler16.inl  handler32.inl  memory.inl
src/dual/src/arm/interpreter/: interpreter_cpu.cpp  interpreter_cpu.hpp
src/dual/src/arm/interpreter/handlers/: arithmetic.inl  handler16.inl  memory.inl
src/dual/src/arm/interpreter/tablegen/: gen_arm.hpp  gen_thumb.hpp  tablegen.cpp
src/dual/src/arm/jit/: lunatic_cpu.cpp  lunatic_cpu.hpp
src/dual/src/arm/tablegen/: decoder.hpp  gen_arm.hpp  gen_thumb.hpp  tablegen.cpp
src/dual/src/common/: scheduler.cpp
src/dual/src/nds/: cartridge.cpp  dma.cpp  ipc.cpp  irq.cpp  nds.cpp  swram.cpp  timer.cpp  vram.cpp
src/dual/src/nds/arm7/: apu.cpp  dma.cpp  io.cpp  memory.cpp  rtc.cpp  spi.cpp  touch_screen.cpp  wifi.cpp
src/dual/src/nds/arm9/: cp15.cpp  dma.cpp  io.cpp  math.cpp  memory.cpp
src/dual/src/nds/backup/: eeprom.cpp  eeprom512b.cpp  flash.cpp
src/dual/src/nds/video_unit/: video_unit.cpp
src/dual/src/nds/video_unit/gpu/: command_processor.cpp  geometry_engine.cpp  gpu.cpp
src/dual/src/nds/video_unit/gpu/command_processor/: command_processor.cpp  geometry.cpp  matrix.cpp
src/dual/src/nds/video_unit/gpu/renderer/software/: edge.hpp  edge_marking.cpp  fog.cpp  interpolator.hpp  rasterizer.cpp  software_renderer.cpp
src/dual/src/nds/video_unit/ppu/: composer.cpp  ppu.cpp  registers.cpp
src/dual/src/nds/video_unit/ppu/render/: affine.cpp  oam.cpp  text.cpp  window.cpp
src/platform/sdl/: CMakeLists.txt
src/platform/sdl/src/: application.cpp  application.hpp  emulator_thread.cpp  emulator_thread.hpp  frame_limiter.cpp  frame_limiter.hpp  main.cpp  sdl2_audio_driver.cpp  sdl2_audio_driver.hpp
